force-app/main/default/objects/SFDC_Performance_Review__c/fields/Advices_customer_on_relevant_services__c.field-meta.xml
<CustomField>
    <fullName>Advices_customer_on_relevant_services__c</fullName>
    <inlineHelpText>Does the employee advice the customer about all relevant services?</inlineHelpText>
    <label>Advices customer on relevant services?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>