force-app/main/default/objects/SFDC_Performance_Review__c/fields/Are_objections_handled_reasonably__c.field-meta.xml
<CustomField>
    <fullName>Are_objections_handled_reasonably__c</fullName>
    <inlineHelpText>Does the employee handle objections reasonably and with an understanding tone?</inlineHelpText>
    <label>Are objections handled reasonably?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>