force-app/main/default/objects/SFDC_Performance_Review__c/fields/Ask_questions_and_controls_conversation__c.field-meta.xml
<CustomField>
    <fullName>Ask_questions_and_controls_conversation__c</fullName>
    <inlineHelpText>Does the employee stay in control of the conversation with the customer, by asking questions?</inlineHelpText>
    <label>Ask questions and controls conversation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>