force-app/main/default/objects/SFDC_Performance_Review__c/fields/Call_Time__c.field-meta.xml
<CustomField>
    <fullName>Call_Time__c</fullName>
    <inlineHelpText>Select the date and time of the call you were monitoring.
If live monitoring, just pick the current time and date.</inlineHelpText>
    <label>Call Time</label>
    <type>DateTime</type>
</CustomField>