force-app/main/default/objects/SFDC_Performance_Review__c/fields/Checks_master_data_and_spells_correctly__c.field-meta.xml
<CustomField>
    <fullName>Checks_master_data_and_spells_correctly__c</fullName>
    <inlineHelpText>Does the employee make sure to check the master data and get their spelling correct?</inlineHelpText>
    <label>Checks master data and spells correctly?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>