force-app/main/default/objects/SFDC_Performance_Review__c/fields/Correct_solutions_being_recommended__c.field-meta.xml
<CustomField>
    <fullName>Correct_solutions_being_recommended__c</fullName>
    <inlineHelpText>Does the employee recommend the correct solutions, in terms of the provisions of the inheritance laws?</inlineHelpText>
    <label>Correct solutions being recommended?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>