force-app/main/default/objects/SFDC_Performance_Review__c/fields/Customer_Service_Internal_External__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Internal_External__c</fullName>
    <label>Customer Service (Internal &amp; External)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Understands customer needs</fullName>
            </value>
            <value>
                <fullName>Responds to customer needs</fullName>
            </value>
            <value>
                <fullName>Gives complete &amp; timely responses</fullName>
            </value>
            <value>
                <fullName>Exceeds expectations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>