force-app/main/default/objects/SFDC_Performance_Review__c/fields/Data_logged_correctly_in_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Data_logged_correctly_in_Salesforce__c</fullName>
    <inlineHelpText>Does the employee log all data correctly in Salesforce?</inlineHelpText>
    <label>Data logged correctly in Salesforce?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>