force-app/main/default/objects/SFDC_Performance_Review__c/fields/Dependability__c.field-meta.xml
<CustomField>
    <fullName>Dependability__c</fullName>
    <label>Dependability</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attends work regularly</fullName>
            </value>
            <value>
                <fullName>Plans appropriately for absences</fullName>
            </value>
            <value>
                <fullName>Embraces positive change</fullName>
            </value>
            <value>
                <fullName>Adjusts to changing responsibilities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>