force-app/main/default/objects/SFDC_Performance_Review__c/fields/Did_the_call_end_on_a_positive_note__c.field-meta.xml
<CustomField>
    <fullName>Did_the_call_end_on_a_positive_note__c</fullName>
    <inlineHelpText>Does the employee make sure to end the call on a positive note, no matter the outcome?</inlineHelpText>
    <label>Did the call end on a positive note?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>