force-app/main/default/objects/SFDC_Performance_Review__c/fields/Does_employee_match_tone_and_tempo__c.field-meta.xml
<CustomField>
    <fullName>Does_employee_match_tone_and_tempo__c</fullName>
    <inlineHelpText>Does the employee match the tone and tempo of the customer?</inlineHelpText>
    <label>Does employee match tone and tempo?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>