force-app/main/default/objects/SFDC_Performance_Review__c/fields/Does_employee_seek_help_if_in_doubt__c.field-meta.xml
<CustomField>
    <fullName>Does_employee_seek_help_if_in_doubt__c</fullName>
    <inlineHelpText>Does the employee make sure to ask legal rep or trainer, when he/she is in doubt?</inlineHelpText>
    <label>Does employee seek help if in doubt?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>