force-app/main/default/objects/SFDC_Performance_Review__c/fields/Does_employee_sum_up_the_benefits__c.field-meta.xml
<CustomField>
    <fullName>Does_employee_sum_up_the_benefits__c</fullName>
    <inlineHelpText>Does the employee sum up the key points of the conversation, to make sure both parties agree about what&apos;s important?</inlineHelpText>
    <label>Does employee sum up key points?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>