force-app/main/default/objects/SFDC_Performance_Review__c/fields/Employee_Comments__c.field-meta.xml
<CustomField>
    <fullName>Employee_Comments__c</fullName>
    <label>Employee Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>