force-app/main/default/objects/SFDC_Performance_Review__c/fields/Employee_Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Employee_Review_Notes__c</fullName>
    <label>Employee Review Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>