force-app/main/default/objects/SFDC_Performance_Review__c/fields/Employee_understand_customer_s_WII_FM__c.field-meta.xml
<CustomField>
    <fullName>Employee_understand_customer_s_WII_FM__c</fullName>
    <inlineHelpText>Does the employee have a good feel for the WII-FM of the customer he/she is speaking to?</inlineHelpText>
    <label>Employee understand customer&apos;s WII-FM?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>