force-app/main/default/objects/SFDC_Performance_Review__c/fields/Family_situation_summed_up__c.field-meta.xml
<CustomField>
    <fullName>Family_situation_summed_up__c</fullName>
    <inlineHelpText>Does the employee make sure to sum up the family situation of the customer?</inlineHelpText>
    <label>Family situation summed up?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>