force-app/main/default/objects/SFDC_Performance_Review__c/fields/Family_Sum_Up__c.field-meta.xml
<CustomField>
    <fullName>Family_Sum_Up__c</fullName>
    <inlineHelpText>If you have any additional notes, add them here.</inlineHelpText>
    <label>Family Sum-Up</label>
    <type>TextArea</type>
</CustomField>