force-app/main/default/objects/SFDC_Performance_Review__c/fields/Is_data_only_shared_with_data_owner__c.field-meta.xml
<CustomField>
    <fullName>Is_data_only_shared_with_data_owner__c</fullName>
    <inlineHelpText>Does the employee only share data with the actual owner of the data and no third parties?</inlineHelpText>
    <label>Is data only shared with data owner?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>