force-app/main/default/objects/SFDC_Performance_Review__c/fields/Is_employee_engaged__c.field-meta.xml
<CustomField>
    <fullName>Is_employee_engaged__c</fullName>
    <inlineHelpText>Is the employee properly engaged in the conversation and seems genuinely interested?</inlineHelpText>
    <label>Is employee engaged?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>