force-app/main/default/objects/SFDC_Performance_Review__c/fields/Is_My_Employee__c.field-meta.xml
<CustomField>
    <fullName>Is_My_Employee__c</fullName>
    <formula>IF(  Manager_SFID__c = $User.Id , true , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is My Employee</label>
    <type>Checkbox</type>
</CustomField>