force-app/main/default/objects/SFDC_Performance_Review__c/fields/Is_obligatory_ending_used__c.field-meta.xml
<CustomField>
    <fullName>Is_obligatory_ending_used__c</fullName>
    <inlineHelpText>Does the employee always remember to use the obligatory ending?</inlineHelpText>
    <label>Is obligatory ending used?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>