force-app/main/default/objects/SFDC_Performance_Review__c/fields/Is_presentation_professional__c.field-meta.xml
<CustomField>
    <fullName>Is_presentation_professional__c</fullName>
    <inlineHelpText>Does the employee present him/herself professionally to the customer?</inlineHelpText>
    <label>Is presentation professional?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>