force-app/main/default/objects/SFDC_Performance_Review__c/fields/Job_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Job_Knowledge__c</fullName>
    <label>Job Knowledge</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Applies standard procedures</fullName>
            </value>
            <value>
                <fullName>Maintains technical proficiency</fullName>
            </value>
            <value>
                <fullName>Serves as a job resource for others</fullName>
            </value>
            <value>
                <fullName>Documents work processes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>