force-app/main/default/objects/SFDC_Performance_Review__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field is used for the performance review and searches are made within leads</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Performance Reviews</relationshipLabel>
    <relationshipName>Performance_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>