force-app/main/default/objects/SFDC_Performance_Review__c/fields/Manager_SFID__c.field-meta.xml
<CustomField>
    <fullName>Manager_SFID__c</fullName>
    <formula>Supervisor__r.User_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager SFID</label>
    <type>Text</type>
</CustomField>