force-app/main/default/objects/SFDC_Performance_Review__c/fields/Manager_Status__c.field-meta.xml
<CustomField>
    <fullName>Manager_Status__c</fullName>
    <label>Manager Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Managing Others</fullName>
            </value>
            <value>
                <fullName>No Subordinates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>