force-app/main/default/objects/SFDC_Performance_Review__c/fields/Master_Data_and_Spelling_Check__c.field-meta.xml
<CustomField>
    <fullName>Master_Data_and_Spelling_Check__c</fullName>
    <inlineHelpText>If you have any additional notes, add them here.</inlineHelpText>
    <label>Master Data and Spelling Check</label>
    <type>TextArea</type>
</CustomField>