force-app/main/default/objects/SFDC_Performance_Review__c/fields/Monitoring_Type__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_Type__c</fullName>
    <inlineHelpText>Select the type of monitoring that was done.</inlineHelpText>
    <label>Monitoring Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Side-by-Side</fullName>
            </value>
            <value>
                <fullName>Recorded</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>