force-app/main/default/objects/SFDC_Performance_Review__c/fields/Notes_on_Business_Critical_Errors__c.field-meta.xml
<CustomField>
    <fullName>Notes_on_Business_Critical_Errors__c</fullName>
    <inlineHelpText>If you have any additional notes, put them here.</inlineHelpText>
    <label>Notes on Business Critical Errors</label>
    <type>TextArea</type>
</CustomField>