force-app/main/default/objects/SFDC_Performance_Review__c/fields/Notes_on_Non_Critical_Errors__c.field-meta.xml
<CustomField>
    <fullName>Notes_on_Non_Critical_Errors__c</fullName>
    <inlineHelpText>If you have any additional notes to add about errors made in the Non-Critital section, put them here.</inlineHelpText>
    <label>Notes on Non-Critical Errors</label>
    <type>TextArea</type>
</CustomField>