force-app/main/default/objects/SFDC_Performance_Review__c/fields/Period_Review__c.field-meta.xml
<CustomField>
    <fullName>Period_Review__c</fullName>
    <label>Period Review</label>
    <length>30</length>
    <type>Text</type>
</CustomField>