force-app/main/default/objects/SFDC_Performance_Review__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <inlineHelpText>Enter the phone number of the customer here</inlineHelpText>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>