force-app/main/default/objects/SFDC_Performance_Review__c/fields/Presentation_is_professional__c.field-meta.xml
<CustomField>
    <fullName>Presentation_is_professional__c</fullName>
    <inlineHelpText>Does the person present themselves in an orderly fashion. Company name and with a smile in their voice.</inlineHelpText>
    <label>Presentation is professional?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>