force-app/main/default/objects/SFDC_Performance_Review__c/fields/Presentation_notes__c.field-meta.xml
<CustomField>
    <fullName>Presentation_notes__c</fullName>
    <label>Presentation notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>