force-app/main/default/objects/SFDC_Performance_Review__c/fields/Problems_covered_before_trying_to_close__c.field-meta.xml
<CustomField>
    <fullName>Problems_covered_before_trying_to_close__c</fullName>
    <inlineHelpText>Does the employee go over problems in detail before presenting the customer with a solution?</inlineHelpText>
    <label>Problems covered before trying to close?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>