force-app/main/default/objects/SFDC_Performance_Review__c/fields/Professional_Presentation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Professional_Presentation_Comments__c</fullName>
    <inlineHelpText>If you have any additional notes, add them here.</inlineHelpText>
    <label>Professional Presentation Comments</label>
    <type>TextArea</type>
</CustomField>