force-app/main/default/objects/SFDC_Performance_Review__c/fields/Quality_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Quality_of_Work__c</fullName>
    <label>Quality of Work</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Follows instruction carefully</fullName>
            </value>
            <value>
                <fullName>Work is thorough and accurate</fullName>
            </value>
            <value>
                <fullName>Implements process improvements</fullName>
            </value>
            <value>
                <fullName>Analyzes and dev effective solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>