force-app/main/default/objects/SFDC_Performance_Review__c/fields/Quantity_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Quantity_of_Work__c</fullName>
    <label>Quantity of Work</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Produces acceptable work products</fullName>
            </value>
            <value>
                <fullName>Works quickly and efficiently</fullName>
            </value>
            <value>
                <fullName>Organizes and prioritizes work</fullName>
            </value>
            <value>
                <fullName>Performs well under pressure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>