force-app/main/default/objects/SFDC_Performance_Review__c/fields/Quantity_of_Work_Notes__c.field-meta.xml
<CustomField>
    <fullName>Quantity_of_Work_Notes__c</fullName>
    <label>Quantity of Work Notes</label>
    <type>TextArea</type>
</CustomField>