force-app/main/default/objects/SFDC_Performance_Review__c/fields/Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Date__c</fullName>
    <inlineHelpText>Input the time and date of doing the review</inlineHelpText>
    <label>Review Date</label>
    <type>DateTime</type>
</CustomField>