force-app/main/default/objects/SFDC_Performance_Review__c/fields/Review_Type__c.field-meta.xml
<CustomField>
    <fullName>Review_Type__c</fullName>
    <label>Review Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-2-1</fullName>
            </value>
            <value>
                <fullName>Performance Review</fullName>
            </value>
            <value>
                <fullName>Touch Base</fullName>
            </value>
            <value>
                <fullName>Coaching Session</fullName>
            </value>
            <value>
                <fullName>Absence Review</fullName>
            </value>
            <value>
                <fullName>Salary Review</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Monitoring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>