force-app/main/default/objects/SFDC_Performance_Review__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <label>Reviewer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>