force-app/main/default/objects/SFDC_Performance_Review__c/fields/Supervision__c.field-meta.xml
<CustomField>
    <fullName>Supervision__c</fullName>
    <label>Supervision</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Manager_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Encourages staff development</fullName>
            </value>
            <value>
                <fullName>Provides motivation and guidance</fullName>
            </value>
            <value>
                <fullName>Clearly defines expectations</fullName>
            </value>
            <value>
                <fullName>Understands and adheres to policy</fullName>
            </value>
            <value>
                <fullName>Treats problems with sensitivity</fullName>
            </value>
            <value>
                <fullName>Demonstrates leadership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>