force-app/main/default/objects/SFDC_Performance_Review__c/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the name of the supervisor who&apos;s doing monitoring</inlineHelpText>
    <label>Supervisor</label>
    <referenceTo>SFDC_Employee__c</referenceTo>
    <relationshipLabel>Performance Reviews (Supervisor)</relationshipLabel>
    <relationshipName>Performance_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>