force-app/main/default/objects/SFDC_Performance_Review__c/fields/Teamwork_and_Cooperation__c.field-meta.xml
<CustomField>
    <fullName>Teamwork_and_Cooperation__c</fullName>
    <label>Teamwork and Cooperation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Works with others toward success</fullName>
            </value>
            <value>
                <fullName>Shows concern for others</fullName>
            </value>
            <value>
                <fullName>Earns respect &amp; confidence of others</fullName>
            </value>
            <value>
                <fullName>Sets group success as priority</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>