force-app/main/default/objects/SFDC_Performance_Review__c/fields/Was_sale_confirmed_on_email_SE__c.field-meta.xml
<CustomField>
    <fullName>Was_sale_confirmed_on_email_SE__c</fullName>
    <inlineHelpText>Did the employee await the email confirmation before logging the sale in Salesforce?</inlineHelpText>
    <label>Was sale confirmed on email? (SE)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>