force-app/main/default/objects/SFDC_Performance_Review__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Review_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Review_Type__c</columns>
    <columns>Employee__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Reviewer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>Human_Resources</group>
    </sharedTo>
</ListView>