force-app/main/default/objects/SFDC_Performance_Review__c/listViews/My_Employees_Performance_Reviews.listView-meta.xml
<ListView>
    <fullName>My_Employees_Performance_Reviews</fullName>
    <columns>NAME</columns>
    <columns>Review_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Review_Type__c</columns>
    <columns>Employee__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Reviewer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_My_Employee__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Employees&apos; Performance Reviews</label>
</ListView>